[project]
name = "FFPopSim"
version = "3.1.0"
description = "Library to simulate evolution of large populations that are polymorphic at many loci."
authors = [
  { name = "Fabio Zanini"},
  { name = "Richard Neher", email = "richard.neher@unibas.ch" },
  { name = "Ivan Aksamentov" },
]
readme = "README.md"
requires-python = ">=3.6"
keywords = ["packaging", "dependency", "infer", "pyproject.toml"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
[project.urls]
homepage = "https://github.com/neherlab/ffpopsim"
documentation = "https://readthedocs.org/projects/ffpopsim"
repository = "https://github.com/neherlab/ffpopsim"


[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "numpy",
  "ppsetuptools",
  "setuptools",
  "wheel",
]
